Adjustments to record sizes
Signed-off-by: Michael Edgar <medgar@redhat.com>